--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,9 +13,11 @@
     --foreground: #ededed;
   }
 }
-
+*/
 body {
   color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-} */
+  background-image: url("/background.png");
+  background-size: fill;
+  background-repeat: no-repeat;
+  background-position: center;
+}
